# TUP-InfantryVision-2022

./: .gitignore  CMakeLists.txt  README.md  WatchDDog.sh  debug.h  main.cpp  myfile
.cache/: 1401712224263424037.cl_cache  2316222369198590955.cl_cache  2563922073469725654.cl_cache  264646718204045031.cl_cache  2655287761251701625.cl_cache  4480268814092572648.cl_cache  4541264649812012775.cl_cache  4723920372951731805.cl_cache  4965149630212937936.cl_cache  5156644581375801.cl_cache  5172462782544395898.cl_cache  5327330394233953010.cl_cache  5566213161470926020.cl_cache  5639442650716336277.cl_cache  570695076119057378.cl_cache  625236779913398438.cl_cache  6854430109607110056.cl_cache  7151557465517497524.cl_cache  7375854449128462891.cl_cache  7540834295632430235.cl_cache  7872853996901974223.cl_cache  9353943867167374884.cl_cache  9364743595960338657.cl_cache  9463836940761881762.cl_cache  965997887303350985.cl_cache  9802066826252438292.cl_cache  9896628138907025890.cl_cache
HaiKang_SDK/: HaiKangCamera.cpp  Readme.md
HaiKang_SDK/include/: HaiKangCamera.h  MvCameraControl.h  MvISPErrorDefine.h
autoaim/: CMakeLists.txt  README.md  armor_tracker.cpp  armor_tracker.h  autoaim.cpp  autoaim.h  debug.h
autoaim/detector/: inference.cpp  inference.h
autoaim/predictor/: debug.h  particle_filter.cpp  particle_filter.h  predictor.cpp  predictor.h
buff/: README.md  buff.cpp  buff.h  debug.h  fan_tracker.cpp  fan_tracker.h
buff/detector/: debug.h  inference.cpp  inference.h
buff/predictor/: debug.h  particle_filter.cpp  predictor.cpp  predictor.h
camera/: DaHengCamera.cpp  DaHengCamera.h  DxImageProc.h  GxIAPI.h
coordsolver/: README.md  coordsolver.cpp  coordsolver.h
data/: README.md
exception/: exception.cpp  exception.h
filter/: README.md  particle_filter.cpp  particle_filter.h
general/: general.cpp  general.h
hik_camera/: CMakeLists.txt  HaiKangCamera.cpp  Readme.md
hik_camera/include/: CameraParams.h  HaiKangCamera.h  MvErrorDefine.h  PixelType.h
log/error/: README.md
log/info/: 20220521-205409.19922  Infantry_Vision.INFO
log/warning/: Infantry_Vision.WARNING
model/: 0303.xml  0311_416.xml  buff.xml  colab.xml  nano.xml  nano_0411.xml  nano_hswish.xml  nanov2.xml  no_act.xml  opt-0503-001.xml  opt-0516-001.xml  opt-0517-001.xml  opt-0527-001.onnx  opt-0527-001.xml  opt-0625-001.onnx  shuffle-relu.xml  shuffle.xml  shufflev2-252.xml  yoloxs.xml
params/: camera.yaml  config.yaml  coord_param.yaml
params/filter/: filter_param.yaml
serial/: CRC_Check.cpp  CRC_Check.h  serialport.cpp  serialport.h  wt61pc.cpp  wt61pc.h
thread/: thread.cpp  thread.h
